--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "node --import=tsx --watch --env-file=.env src/index.ts"
   },
   "author": "",
   "license": "ISC",
@@ -14,7 +15,7 @@
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
-    "tsx": "github:types/express",
+    "tsx": "^4.19.1",
     "typescript": "^5.6.3"
   }
 }
