--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node --import=tsx --watch --env-file=.env src/index.ts"
+    "dev": "node --import=tsx --watch --env-file=.env src/index.ts",
+    "build": "tsc"
   },
   "author": "",
   "license": "ISC",
