--- a/api/package.json
+++ b/api/package.json
@@ -17,7 +17,8 @@
   "dependencies": {
     "drizzle-orm": "^0.36.0",
     "express": "^4.21.1",
-    "pg": "^8.13.1"
+    "pg": "^8.13.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
