--- a/api/package.json
+++ b/api/package.json
@@ -19,6 +19,7 @@
     "drizzle-orm": "^0.36.0",
     "drizzle-zod": "^0.5.1",
     "express": "^4.21.1",
+    "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "pg": "^8.13.1",
     "zod": "^3.23.8"
@@ -26,6 +27,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/lodash": "^4.17.13",
     "@types/pg": "^8.11.10",
     "drizzle-kit": "^0.27.1",
